--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
   type="text/css"
   href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
 />
-    <title> Hi 👋 there! I'm Oli Ullah</title>
+    <title> </title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+    
   </body>
 </html>
